# renovate-test

./: .gitignore  pyproject.toml  renovate.json
.github/: renovate.json
.github/workflows/: echo.yml
app/: pyproject.toml
renovate_test/: __init__.py  main.py
terraform/: main.tf
tests/: test_main.py
